--- a/src/app/config/config.component.scss
+++ b/src/app/config/config.component.scss
@@ -6,7 +6,8 @@
   height: -webkit-fill-available;
   justify-content: center;
 }
-.mat-mdc-form-field{
+
+.mat-mdc-form-field {
   width: 300px;
   align-self: center;
 }
@@ -16,7 +17,7 @@
 //    background-color: red;
 //  }
 //}
-.saveBtn:disabled{
+.saveBtn:disabled {
   //background-color: rgba(119, 119, 119, 0.11);
   //scale: 1.1;
   //width: 120%;
@@ -38,6 +39,7 @@
   //font-weight: bold;
   color: #808080;
 }
+
 //.mat-icon {
 //  scale: 1.5
 //}
@@ -51,17 +53,29 @@
   top: 25px;
 }
 
-.mailButton{
+.mailButton {
   border-radius: 14px;
   padding: 6px;
   //background: #f5f5f5;
 }
+
+.mat-button-toggle-checked {
+  background-color: red;
+}
+
+
+.mat-button-toggle-group {
+  align-self: center;
+  //color styling in style.scss
+}
+
 span {
   height: 14px;
   width: 2.3px;
   background-color: #808080;
   border-radius: 100px;
 }
-.exitButton{
-//scale: 0.8;
+
+.exitButton {
+  //scale: 0.8;
 }
