--- a/src/app/config/config.component.scss
+++ b/src/app/config/config.component.scss
@@ -10,6 +10,7 @@
 .mat-mdc-form-field {
   width: 300px;
   align-self: center;
+  margin-block: .3rem;
 }
 
 //::ng-deep {
@@ -59,14 +60,22 @@
   //background: #f5f5f5;
 }
 
-.mat-button-toggle-checked {
-  background-color: red;
-}
-
-
 .mat-button-toggle-group {
   align-self: center;
+  // margin-top: 1.2rem;
+  margin-bottom: 1.2rem;
   //color styling in style.scss
+
+}
+
+.mid-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+mat-button-toggle-group {
+  justify-content: center;
 }
 
 span {
