Feat: add more reset options

--- a/src/app/config/config.component.html
+++ b/src/app/config/config.component.html
@@ -1,8 +1,12 @@
 <div [ngClass]="themeService.themeSignal()" class="configPage">
-
   <!--  Settings and dark mode buttons-->
   <div class="button-container-config">
-    <button [matTooltip]="exitTip" mat-icon-button (click)="logout()" class="exitButton">
+    <button
+      [matTooltip]="exitTip"
+      mat-icon-button
+      (click)="logout()"
+      class="exitButton"
+    >
       <mat-icon>logout</mat-icon>
     </button>
     <div [matTooltip]="roleTip" mat-icon-button class="mailButton">
@@ -12,79 +16,102 @@
     <div [matTooltip]="mailTip" mat-icon-button class="mailButton">
       {{ loginStatus.mail }}
     </div>
-
   </div>
   <div class="mid-section">
+    <!-- <mat-form-field> -->
+    <!--   <mat-label>Change 20 man reset day</mat-label> -->
+    <!--   <input -->
+    <!--     matInput -->
+    <!--     [matDatepicker]="picker1" -->
+    <!--     [min]="minDate" -->
+    <!--     (dateInput)="inputChange($event.value, '20')" -->
+    <!--     (dateChange)="inputChange($event.value, '20')" -->
+    <!--     [disabled]="!configAccess" -->
+    <!--   /> -->
+    <!--   <mat-hint>MM/DD/YYYY</mat-hint> -->
+    <!--   <mat-datepicker-toggle -->
+    <!--     matIconSuffix -->
+    <!--     [for]="picker1" -->
+    <!--   ></mat-datepicker-toggle> -->
+    <!--   <mat-datepicker #picker1></mat-datepicker> -->
+    <!-- </mat-form-field> -->
     <mat-form-field>
-      <mat-label>Change 20 man reset day</mat-label>
-      <input matInput [matDatepicker]="picker1" [min]="minDate" (dateInput)="inputChange($event.value,'20')"
-        (dateChange)="inputChange($event.value,'20')" [disabled]="!configAccess">
-      <mat-hint>MM/DD/YYYY</mat-hint>
-      <mat-datepicker-toggle matIconSuffix [for]="picker1"></mat-datepicker-toggle>
-      <mat-datepicker #picker1></mat-datepicker>
-    </mat-form-field>
-    <mat-form-field>
-      <mat-label>Pick a time</mat-label>
-      <input matInput [matTimepicker]="picker">
+      <mat-label>Reset time</mat-label>
+      <input matInput [matTimepicker]="picker" />
       <mat-timepicker-toggle matIconSuffix [for]="picker" />
       <mat-timepicker #picker />
     </mat-form-field>
 
-    <mat-label>Change 20 man reset day</mat-label>
-    <mat-button-toggle-group name="dmf" aria-label="Font Style">
-      <mat-button-toggle>Su</mat-button-toggle>
-      <mat-button-toggle>Mo</mat-button-toggle>
-      <mat-button-toggle>Tu</mat-button-toggle>
-      <mat-button-toggle>We</mat-button-toggle>
-      <mat-button-toggle>Th</mat-button-toggle>
-      <mat-button-toggle>Fr</mat-button-toggle>
-      <mat-button-toggle>Sa</mat-button-toggle>
-    </mat-button-toggle-group>
-    <mat-label>Change 40 man reset day</mat-label>
-    <mat-button-toggle-group name="dmf" aria-label="Font Style">
-      <mat-button-toggle>Su</mat-button-toggle>
-      <mat-button-toggle>Mo</mat-button-toggle>
-      <mat-button-toggle>Tu</mat-button-toggle>
-      <mat-button-toggle>We</mat-button-toggle>
-      <mat-button-toggle>Th</mat-button-toggle>
-      <mat-button-toggle>Fr</mat-button-toggle>
-      <mat-button-toggle>Sa</mat-button-toggle>
+    <mat-label>20 man reset day</mat-label>
+    <!-- 20 man -->
+    <mat-button-toggle-group [(ngModel)]="selectedDays.group40" name="group40">
+      <mat-button-toggle *ngFor="let day of daysOfWeek" [value]="day.value">
+        {{ day.label }}
+      </mat-button-toggle>
     </mat-button-toggle-group>
 
-    <mat-label>Change ony reset day</mat-label>
-    <mat-button-toggle-group name="dmf" aria-label="Font Style">
-      <mat-button-toggle>Su</mat-button-toggle>
-      <mat-button-toggle>Mo</mat-button-toggle>
-      <mat-button-toggle>Tu</mat-button-toggle>
-      <mat-button-toggle>We</mat-button-toggle>
-      <mat-button-toggle>Th</mat-button-toggle>
-      <mat-button-toggle>Fr</mat-button-toggle>
-      <mat-button-toggle>Sa</mat-button-toggle>
+    <!-- 40 man -->
+    <mat-label>40 man reset day</mat-label>
+    <mat-button-toggle-group [(ngModel)]="selectedDays.group20" name="group20">
+      <mat-button-toggle *ngFor="let day of daysOfWeek" [value]="day.value">
+        {{ day.label }}
+      </mat-button-toggle>
     </mat-button-toggle-group>
 
-    <mat-label>Change dmf switch day</mat-label>
-    <mat-button-toggle-group name="dmf" aria-label="Font Style">
-      <mat-button-toggle>Su</mat-button-toggle>
-      <mat-button-toggle>Mo</mat-button-toggle>
-      <mat-button-toggle>Tu</mat-button-toggle>
-      <mat-button-toggle>We</mat-button-toggle>
-      <mat-button-toggle>Th</mat-button-toggle>
-      <mat-button-toggle>Fr</mat-button-toggle>
-      <mat-button-toggle>Sa</mat-button-toggle>
+    <!-- ONY -->
+    <mat-label>Next ONY reset day</mat-label>
+    <mat-button-toggle-group
+      [(ngModel)]="selectedDays.groupOny"
+      name="groupOny"
+    >
+      <mat-button-toggle *ngFor="let day of daysOfWeek" [value]="day.value">
+        {{ day.label }}
+      </mat-button-toggle>
     </mat-button-toggle-group>
-    <mat-label>Change where dmf is now</mat-label>
+
+    <!-- DMF -->
+    <mat-label>Dmf switch day</mat-label>
+    <mat-button-toggle-group
+      [(ngModel)]="selectedDays.groupDmf"
+      name="groupDmf"
+    >
+      <mat-button-toggle *ngFor="let day of daysOfWeek" [value]="day.value">
+        {{ day.label }}
+      </mat-button-toggle>
+    </mat-button-toggle-group>
+    <mat-label>Where dmf is now</mat-label>
     <mat-button-toggle-group name="dmf" aria-label="Font Style">
       <mat-button-toggle>Mulgor</mat-button-toggle>
       <mat-button-toggle>Elwyn</mat-button-toggle>
     </mat-button-toggle-group>
 
+    <mat-label>Which madness boss is now active</mat-label>
+    <mat-button-toggle-group name="madness" aria-label="Font Style">
+      <mat-button-toggle>Gri'lek</mat-button-toggle>
+      <mat-button-toggle>Renataki</mat-button-toggle>
+      <mat-button-toggle>Hazza'rah</mat-button-toggle>
+      <mat-button-toggle>Wushoolay</mat-button-toggle>
+    </mat-button-toggle-group>
+
+    <mat-label>Which madness week currently in</mat-label>
+    <mat-button-toggle-group name="madness" aria-label="Font Style">
+      <mat-button-toggle>First week</mat-button-toggle>
+      <mat-button-toggle>Second week</mat-button-toggle>
+    </mat-button-toggle-group>
+
     <!--  save button  -->
     <div class="saveHolder">
       <!--    enables save when savable and configAccess are both true-->
-      <button [disabled]="!configAccess || !savable" (click)="save()" type="submit" mat-button [disableRipple]="false"
-        class="saveBtn">Save
+      <button
+        [disabled]="!configAccess || !savable"
+        (click)="save()"
+        type="submit"
+        mat-button
+        [disableRipple]="false"
+        class="saveBtn"
+      >
+        Save
       </button>
     </div>
-
   </div>
 </div>
