--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,12 +1,17 @@
 <div [ngClass]="themeService.themeSignal()" class="home">
   <!--  Settings and dark mode buttons-->
   <div class="button-container">
-    <button [matTooltip]="configTip" mat-icon-button (click)="goToConfig()"  [ngClass]="configClass">
+    <button [matTooltip]="gotoTip" mat-icon-button (click)="scrollToToday()">
+      <mat-icon>radio_button_checked</mat-icon>
+    </button>
+    <button [matTooltip]="configTip" mat-icon-button (click)="goToConfig()" [ngClass]="configClass">
       <mat-icon>settings</mat-icon>
     </button>
     <button [matTooltip]="themeModTip" mat-icon-button (click)="toggleTheme()">
       <mat-icon>dark_mode</mat-icon>
     </button>
+
+
   </div>
 
   <!--  Dark curtain-->
@@ -16,7 +21,7 @@
 
   <!--  Top text boxes-->
   <div class="topText">
-    <h1 style="font-weight: bold;text-align: center">Everlook Calendar</h1><br/>
+    <h1 style="font-weight: bold;text-align: center">Everlook Calendar</h1><br />
 
     <div class="block_container" style="margin-bottom: 20px">
       <div style="margin-right: 7px"> Server time is now:</div>
@@ -30,7 +35,7 @@
     </div>
 
     <a mat-button href="" routerLink="/zgenchants" routerLinkActive="active" ariaCurrentWhenActive="page"
-       class="linkButton">Click here for
+      class="linkButton">Click here for
       ZG enchants</a>
 
   </div>
