--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,9 +4,27 @@
     <button [matTooltip]="gotoTip" mat-icon-button (click)="scrollToToday()">
       <mat-icon>radio_button_checked</mat-icon>
     </button>
-    <button [matTooltip]="configTip" mat-icon-button (click)="goToConfig()" [ngClass]="configClass">
+    <!-- <button matButton [matMenuTriggerFor]="menu" [matTooltip]="configTip" mat-icon-button (click)="goToConfig()" -->
+    <!--   [ngClass]="configClass"> -->
+    <!--   <mat-icon>settings</mat-icon> -->
+    <!-- </button> -->
+    <button mat-icon-button [matMenuTriggerFor]="menu" [matTooltip]="configTip" [ngClass]="configClass">
       <mat-icon>settings</mat-icon>
     </button>
+    <mat-menu #menu="matMenu" xPosition="after">
+      <div (click)="$event.stopPropagation()">
+        <mat-button-toggle-group multiple hideMultipleSelectionIndicator="true" (change)="onToggleChange($event)">
+          <mat-button-toggle value="option1">ONY</mat-button-toggle>
+          <mat-button-toggle value="option2">AQ20</mat-button-toggle>
+          <mat-button-toggle value="option3">NAXX</mat-button-toggle>
+          <mat-button-toggle value="option3">AQ40</mat-button-toggle>
+          <mat-button-toggle value="option3">ZG</mat-button-toggle>
+          <mat-button-toggle value="option3">K40</mat-button-toggle>
+          <mat-button-toggle value="option3">K10</mat-button-toggle>
+          <mat-button-toggle value="option3">DMF</mat-button-toggle>
+        </mat-button-toggle-group>
+      </div>
+    </mat-menu>
     <button [matTooltip]="themeModTip" mat-icon-button (click)="toggleTheme()">
       <mat-icon>dark_mode</mat-icon>
     </button>
